tests-integration/tests/checking/snapshots/checking__generated__039_value_mutual_multiple_type_variables_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
loop :: forall (t3 :: Type). t3 -> ???
chooseFirst :: forall (a :: Type) (b :: Type). a -> b -> a

Types
