tests-integration/tests/checking/snapshots/checking__generated__040_pattern_guard_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
foo :: Int -> Int
bar :: String -> String
foo' :: forall (t1 :: Type). t1 -> Int
bar' :: forall (t4 :: Type). t4 -> String

Types
