tests-integration/tests/checking/snapshots/checking__generated__042_where_polymorphic_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
apply :: forall (t3 :: Type). t3 -> t3
apply' :: forall (b :: Type). b -> b

Types
