tests-integration/tests/checking/snapshots/checking__generated__043_binder_named_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
foo :: Int -> Int
bar :: String -> String
baz :: Int -> Int
qux :: Int
foo' :: forall (t3 :: Type). t3 -> t3
bar' :: forall (t6 :: Type). t6 -> t6
baz' :: forall (t9 :: Type). t9 -> t9
qux' :: Int

Types

Errors
CannotUnify { t1: Id<checking::core::Type>(13), t2: Id<checking::core::Type>(8) } at [TermDeclaration(Idx::<TermItem>(2))]
