tests-integration/tests/checking/snapshots/checking__generated__044_binder_constructor_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
Pair :: forall (a :: Type) (b :: Type). a -> b -> Pair a b
Nothing :: forall (a :: Type). Maybe a
Just :: forall (a :: Type). a -> Maybe a
Nil :: forall (a :: Type). List a
Cons :: forall (a :: Type). a -> List a -> List a
foo :: Pair Int String -> Int
bar :: Maybe Int -> Int
baz :: List Int -> Int
qux :: Pair String String -> String
foo' :: forall (t19 :: Type) (t20 :: Type). Pair t20 t19 -> t20
bar' :: Maybe Int -> Int
baz' :: List Int -> Int
qux' :: forall (t38 :: Type) (t39 :: Type). Pair t39 t38 -> t39

Types
Pair :: Type -> Type -> Type
Maybe :: Type -> Type
List :: Type -> Type
