tests-integration/tests/checking/snapshots/checking__generated__045_do_discard_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
Unit :: Unit
pure :: forall (a :: Type). a -> Effect a
bind :: forall (a :: Type) (b :: Type). Effect a -> (a -> Effect b) -> Effect b
discard :: forall (a :: Type) (b :: Type). Effect a -> (a -> Effect b) -> Effect b
unit :: Unit
test :: Effect Unit
test' :: Effect Unit

Types
Effect :: Type -> Type
Unit :: Type

Errors
CannotUnify { t1: Id<checking::core::Type>(21), t2: Id<checking::core::Type>(22) } at [TermDeclaration(Idx::<TermItem>(5))]
CannotUnify { t1: Id<checking::core::Type>(21), t2: Id<checking::core::Type>(22) } at [TermDeclaration(Idx::<TermItem>(6))]
