tests-integration/tests/checking/snapshots/checking__generated__048_do_non_monadic_discard_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
bind :: forall (a :: Type) (b :: Type). a -> (a -> b) -> b
discard :: forall (a :: Type) (b :: Type). a -> (a -> b) -> b
test :: Int
test' :: Int

Types

Errors
CannotUnify { t1: Id<checking::core::Type>(15), t2: Id<checking::core::Type>(16) } at [TermDeclaration(Idx::<TermItem>(2))]
CannotUnify { t1: Id<checking::core::Type>(15), t2: Id<checking::core::Type>(16) } at [TermDeclaration(Idx::<TermItem>(3))]
