tests-integration/tests/checking/snapshots/checking__generated__049_ado_discard_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
Unit :: Unit
pure :: forall (a :: Type). a -> Effect a
map :: forall (a :: Type) (b :: Type). (a -> b) -> Effect a -> Effect b
apply :: forall (a :: Type) (b :: Type). Effect (a -> b) -> Effect a -> Effect b
unit :: Unit
test :: Effect Unit
test' :: Effect Unit

Types
Effect :: Type -> Type
Unit :: Type
