tests-integration/tests/checking/snapshots/checking__generated__053_do_polymorphic_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
Tuple :: forall (a :: Type) (b :: Type). a -> b -> Tuple a b
bind :: forall (m :: Type -> Type) (a :: Type) (b :: Type). m a -> (a -> m b) -> m b
discard :: forall (m :: Type -> Type) (a :: Type) (b :: Type). m a -> (a -> m b) -> m b
pure :: forall (m :: Type -> Type) (a :: Type). a -> m a
test :: forall (m :: Type -> Type). m (Tuple Int String)
test' :: forall (t62 :: Type -> Type). t62 (Tuple Int String)

Types
Tuple :: Type -> Type -> Type
