tests-integration/tests/checking/snapshots/checking__generated__054_ado_polymorphic_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
Tuple :: forall (a :: Type) (b :: Type). a -> b -> Tuple a b
map :: forall (f :: Type -> Type) (a :: Type) (b :: Type). (a -> b) -> f a -> f b
apply :: forall (f :: Type -> Type) (a :: Type) (b :: Type). f (a -> b) -> f a -> f b
pure :: forall (f :: Type -> Type) (a :: Type). a -> f a
test :: forall (f :: Type -> Type). f (Tuple Int String)
test' :: forall (t61 :: Type -> Type). t61 (Tuple Int String)

Types
Tuple :: Type -> Type -> Type
